--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,27 +3,41 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      dotnet: 8.0 
+      dotnet: 8.0
     commands:
       - echo "Installing .NET SDK 8.0..."
       - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --channel 8.0
       - export PATH="$HOME/.dotnet:$PATH"
-      - dotnet --version  # Verify the installed version
+      - dotnet --version  # Verify installed version
+
+      - echo "Installing SonarScanner for .NET..."
+      - dotnet tool install --global dotnet-sonarscanner
+      - export PATH="$PATH:$HOME/.dotnet/tools"
+
+  pre_build:
+    commands:
+      - echo "Starting SonarQube analysis..."
+      - dotnet sonarscanner begin /k:"Weather" /d:sonar.host.url="http://52.66.210.51:9000" /d:sonar.login="sqp_d87d23414fe127d673f5d93e02bac95e3594191f"
 
   build:
     commands:
-      - echo "Building the .NET application..."
+      - echo "Restoring dependencies..."
       - dotnet restore
+      - echo "Building the solution..."
+      - dotnet build -c Release
+      - echo "Publishing the application..."
       - dotnet publish -c Release -o output
 
   post_build:
     commands:
-      - echo "Build completed successfully."
+      - echo "Finishing SonarQube analysis..."
+      - dotnet sonarscanner end /d:sonar.login="sqp_d87d23414fe127d673f5d93e02bac95e3594191f"
+      - echo "Build and analysis completed successfully."
 
 artifacts:
   files:
     - appspec.yml
-    - deploy-scripts/**  # Includes all deployment scripts
+    - deploy-scripts/**  # Includes deployment scripts
     - systemd/**         # Includes systemd service files
-    - output/**          # Includes all built .NET files (not zipped)
+    - output/**          # Includes published .NET files
   discard-paths: no
