--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
   pre_build:
     commands:
       - echo "Starting SonarQube analysis..."
-      - dotnet sonarscanner begin /k:"Weather" /d:sonar.host.url="http://52.66.210.51:9000" /d:sonar.login="sqp_d87d23414fe127d673f5d93e02bac95e3594191f"
+      - dotnet sonarscanner begin /k:"Weather" /d:sonar.host.url="http://52.66.210.51:9000" /d:sonar.login="$SONAR_TOKEN"
 
   build:
     commands:
