--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo "Restoring dependencies..."
       - dotnet restore
-      - echo "Building solution..."
+      - echo "Building solution...."
       - dotnet build -c Release
       - echo "Publishing application..."
       - dotnet publish -c Release -o output
